Fix layout overlapping issue

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ body {
 #editorView:not(.hidden) {
     display: grid !important;
     grid-template-columns: 320px 1fr;
+    gap: 30px;
     align-items: start;
 }
 
